# raytracer

./: CMakeLists.txt  README.md  aabb.h  box.txt  brown.txt  camera.cpp  camera.h  check.cpp  check.h  color.h  constants.h  cover.txt  diffuse.cpp  diffuse.h  floor.txt  glass.cpp  glass.h  gradient.cpp  gradient.h  halfWall.txt  halfWall2.txt  halfWallSlant.txt  hit.cpp  hit.h  input.txt  lamp.txt  log.txt  main.cpp  materials.cpp  materials.h  metal.cpp  metal.h  mpi.cpp  object.cpp  object.h  openBox.txt  parse  parse.cpp  parser.cpp  parser.h  (+32 more)
coolPictures/: boxOfBalls.txt  purplePyramid.txt  rPlusSeven.txt  vaporwave.txt
scenes/: standard.txt
